--- a/airline-seat-reservation/docker-compose.yml
+++ b/airline-seat-reservation/docker-compose.yml
@@ -30,4 +30,4 @@ services:
       DB_USER: root
       DB_PASSWORD: rootpassword
       SELECT_QUERY: ${SELECT_QUERY:-SELECT seat_id FROM seats WHERE passenger_id IS NULL LIMIT 1}
-    command: ["java", "-jar", "app.jar", "${SELECT_QUERY:-SELECT seat_id FROM seats WHERE passenger_id IS NULL LIMIT 1}"]
+    command: ["${SELECT_QUERY:-SELECT seat_id FROM seats WHERE passenger_id IS NULL LIMIT 1}"]
